--- a/human_activity_recognition.Rmd
+++ b/human_activity_recognition.Rmd
@@ -2,7 +2,8 @@
 title: "Practical Machine Learning"
 author: "Christopher Maier"
 date: "February 23, 2017"
-output: html_document
+output: html_document:
+keep_md: true
 ---
 
 ```{r setup, include=FALSE}
